--- a/Analysis/HW2.tex
+++ b/Analysis/HW2.tex
@@ -78,7 +78,7 @@
             since $y > 0$. If $y < 0$, consider $(x, y - \frac{\sqrt{\epsilon}}{2})$. 
             Then $t$ is a limit point of $S$. Hence $T \subset S^\prime$. 
             Now if we take a limit point of $S$ and suppose its not in $T$ we will quickly get a contradiction 
-            since we are in $\R^2$, and $x^2 + y^2 > 1$ we can fix a ball around $(x, y)$ that doesnt contain a point 
+            since we are in $\R^2$, and $x^2 + y^2 > 1$ we can fix a ball around $(x, y)$ that doesn't contain a point 
             satisfying $x^2 + y^2 < 1$. 
 
             This set is not closed since it does not contain all its limit points. It is however an open set, 
@@ -160,7 +160,7 @@
             then we prove that every neighborhood either intersects $S$ or every neighborhood intersects $T$. Suppose 
             not, then there exists $U, V$, open around $x$ where $U$ intersects $S$ but not $T$ is the reverse holds for $V$. 
             Then taking the intersection $U \cap V$ gives a neighborhood around $x$ which intersects $S \cup T$ nowhere, a contradiction. 
-            Then WLOG assume every neighborhood intersects $S$, then $x \in S^\prime \cup T^\prime$. 
+            Then without loss of generality assume every neighborhood intersects $S$, then $x \in S^\prime \cup T^\prime$. 
 
             The converse is easy since if $x \in S^\prime \cup T^\prime$ then either $x$ is a limit point of $S$ or $T$. 
             if $x$ is a limit point of $S$, then every neighborhood of $x$ must intersect $S \cup T$ so that $x \in (S \cup T)^\prime$. 
