--- a/Analysis/notes.tex
+++ b/Analysis/notes.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt]{report}
 
 \usepackage{amssymb, graphicx, amsmath, amsthm}
-\usepackage{latexsym,amscd, }
+\usepackage{latexsym,amscd }
 \usepackage{verbatim, lscape, xcolor, mathtools}
 \usepackage{enumerate, collcell, array}
 \usepackage{commath}
@@ -406,4 +406,5 @@
 \tableofcontents
 \include{CH1.tex}
 \include{CH2.tex}
+\include{CH3.tex}
 \end{document}
