--- a/LinearAlgebra/HW_preamble.tex
+++ b/LinearAlgebra/HW_preamble.tex
@@ -1,5 +1,13 @@
 \documentclass[11pt,largemargins]{homework}
+
+
+
+\usepackage{amssymb, graphicx, amsmath, amsthm}
+\usepackage{latexsym,amscd, }
+\usepackage{verbatim, lscape, xcolor, mathtools}
+\usepackage{enumerate, collcell, array}
 \usepackage{commath}
+
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Q}{\mathbb{Q}}
@@ -11,8 +19,8 @@
 \newcommand{\dom}{\operatorname{dom}}
 \newcommand{\eps}{\varepsilon}
 \newcommand{\ssd}{\bigtriangleup}
-\newcommand{\pow}{\mathcal{P}}
-
+\newcommand{\spa}{{\tt span}}
+\newcommand{\pow}{\mathbb(P)}
 % TODO: replace these with your information
 % TODO: replace these with your information
 \newcommand{\hwname}{Evan Fox}
