--- a/Topology/CH1.tex
+++ b/Topology/CH1.tex
@@ -616,15 +616,17 @@
    it turns out that the subbasis formalism is more useful, so we call that the product topology and the other definition gives 
    the box topology. Then we just prove that the box topology is finer than the product topology. Then we prove that 
    continuity of maps into products only holds in the product topology not in the box topology. 
-   
-   We have more to say about box and product topologies when we talk about metric spaces. 
 
-   \newpage
-   
-   \newpage 
 
    \section{Metric spaces I }
+   topics covered
+   introduction to metric spaces, discussion of bounded metrics, square/ecludidian metric induce product topology on $\R^n$
+   uniform metric and connection to uniform convergence, uniform metric on $\R^J$ for an arbitrary collection $J$. Metrizability of $\R^\omega$ in the product topology. 
+
 
    \section{Metric spaces II}
+
+
     
+
 \end{chapter}
