--- a/Analysis/CH3.tex
+++ b/Analysis/CH3.tex
@@ -1,11 +1,5 @@
 \begin{chapter}{Sequences}
-    We have spent about the first 7-8 weeks of the course discussing the basic propertys of metric spaces and well as learning some topology. Now we get to what is more generally considered analysis, 
-    which begins with a rigorous study of sequences. 
+    We have spent about the first 7-8 weeks of the course discussing the basic propertys of metric spaces and well as learning some topology. Now we get to what is more generally considered analysis. 
 
-
-	A sequence can be thought of as a function $x: \N \to \R$, we often write $x_n $ for $x(n)$ 
-
-
-	Here are more additions $\xi$. 
 
 \end{chapter}
