--- a/Topology/HW_preamble.tex
+++ b/Topology/HW_preamble.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt,largemargins]{homework}
-\usepackage{commath}
+\usepackage{commath, mathtools}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Q}{\mathbb{Q}}
