--- a/Topology/HW3.tex
+++ b/Topology/HW3.tex
@@ -47,8 +47,9 @@
         Now we show that this space is not lindelof, consider the convering $S_a$ for all $a \in S_\Omega$, and suppose a countble subcollection covers $S_\Omega$, then we get that the countable union of countable sets convers $S_\Omega$, which cannot be the case since $S_\Omega$ is uncountable and 
         the countable union of countable sets is countable. 
 
-        The only thing that changes when considering $\overline{S_\Omega}$, is that the space is no longer first countable since we have included the point $\Omega$, Given any countable collection of open sets around $\Omega$, the set of lower bounds of these intervals forms a countable set and 
+        First note that $\overline{S_\Omega}$ is no longer first countable since we have included the point $\Omega$, Given any countable collection of open sets around $\Omega$, the set of lower bounds of these intervals forms a countable set and 
         as such is bounded, then we may take an element larger than the upperbound and form an open set containg $\Omega$ that doesn't contain any element of our countable collect, hence $\overline{S_\Omega}$ fails to be first countable at the point $\Omega$. 
+        Secondly, we know that $\overline{S_\Omega}$ is the one point compactification of $S_\Omega$ and as such it is compact. Thus it is trivially lindelof. The other conditions are the same as above. 
     \end{proof} 
 
 
