--- a/Graph Theory/hw4.tex
+++ b/Graph Theory/hw4.tex
@@ -52,8 +52,7 @@ case the graph is a star and we have $\frac{e(G)}{\Delta{G}} = \frac{n-1}{n-1} =
 
 \begin{prb} 
 	\begin{proof} 
-		The max matching is 8 as pictured because there exists a vertex cover of size 8 
-	\end{proof}
+		The max matching is 8 as pictured because There is no $M$-augmenting path	\end{proof}
 \end{prb} 
 \newpage
 \begin{prb} 
