--- a/Measure/hw1.tex
+++ b/Measure/hw1.tex
@@ -84,10 +84,11 @@
 
 		\item 
 			Define 
-			$\alpha: \mathcal{P}(\N) \to \{0, 1\}^\N$ by $\alpha(A) = \{ \alpha_1, \alpha_2, \dots)$ where
+			$\alpha: \mathcal{P}(\N) \to \{0, 1\}^\N$ by $\alpha(A) = \{ \alpha_1, \alpha_2, \dots\} $ where
 			$\alpha_n = 1 $ if $n \in A$ and 0 otherwise. Then given $b \in \{0, 1\}^{\N}, 
 			\, b = (b_1, b_2, \dots)$, we have $S = \{ n \, | \, b_n = 1\} \in \mathcal{P}(\N)$ with $\alpha(S) = b$. Hence
-			$\alpha$ is a surjection. 
+			$\alpha$ is a surjection and since by the above we know that $\{0,1 \}^\N$ is uncountable, it 
+		follows that $\mathcal{P}(\N)$ is uncountable as well. 
 	\end{enumerate}
 \end{proof} 
 
