--- a/Analysis/CH2.tex
+++ b/Analysis/CH2.tex
@@ -138,7 +138,7 @@
         Then we have that 
     \end{proof}
 
-    This theorem is extremely useful, for example we can use this to show that every convergent sequence contains a convergent subsequence. 
+    This theorem is extremly useful, for example we can use this to show that every convergent sequence contains a convergent subsequence. 
     We may use the Bolzano-weierstrass theorem to prove the cantor intersection theorem. 
 
     
