--- a/Topology/HW3.tex
+++ b/Topology/HW3.tex
@@ -56,8 +56,8 @@
 
 
     \question
-    Let $P:X \to Y$ be closed continuous and surjective. 
-
+    Let $P:X \to Y$ be closed continuous and surjective. We prove the abd $\implies$ xyz. 
+    
     \begin{alphaparts}
         \questionpart 
         Show that $X$ Hausdorff implies the same for $Y$. 
